split off the button icon from the button textures in CTexturedButton, fixed some warnings and made some script notices actually disable the script